# claude-switch

./: README.md  pyproject.toml
src/claude_switch/: __init__.py  __main__.py  account.py  builtin_presets.toml  cli.py  config.py  credential.py  exceptions.py  printer.py  provider.py  settings.py
tests/: conftest.py  test_cli.py  test_config.py  test_provider.py
