[project]
name = "claude-switch"
version = "0.1.0"
description = "Provider + account switcher for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [{name = "User"}]
license = {text = "MIT"}
keywords = ["claude", "claude-code", "provider-switcher", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]

[project.scripts]
claude-switch = "claude_switch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_switch"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
